--- a/pageviewer.css
+++ b/pageviewer.css
@@ -1,8 +1,3 @@
-body{
-	background:black;
-	text-align:center;
-}
-
 button{
 	color:black;
 	width:64;
@@ -14,9 +9,12 @@ button{
 	border-style:solid;
 	border-width:5px;
 	border-color:white;
-	cursor: pointer;
+	max-width:90%;
 }
 
-.selectButtons{
-	margin:24px;
+.mbut{
+	max-height:100px;
+	margin:96px;
+	margin-bottom:24px;
+	margin-top:0px;
 }
