--- a/pageviewer.css
+++ b/pageviewer.css
@@ -10,12 +10,12 @@ button{
 	border-width:5px;
 	border-color:white;
 	max-width:90%;
-	margin-bottom:32px;
+	margin:32px;
 }
 
 .mbut{
 	max-height:100px;
 	margin:96px;
-	margin-bottom:24px;
+	margin-bottom:0px;
 	margin-top:0px;
 }
