--- a/remyviewer.css
+++ b/remyviewer.css
@@ -7,9 +7,9 @@ button{
 
 .myImage{
 	border-style:solid;
-	border-width:5px;
+	border-width:0px;
 	border-color:white;
-	max-width:90%;
+	max-width:950px;
 	margin:32px;
 }
 
